# Optimizers

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  sgd.cpp
src/vector/: vector.cpp  vector.h
src/vector/include/: vector.h
